welcome.lessons.welcome.array.has271.Has271.scala.error
has271:7: error: ')' expected but 'for' found.
 for ( i<- 0 to nums.length-3){
 ^has271:12: error: ';' expected but 'return' found.
return false;
^